# AI-STT-Infra

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  task_description.md  task_description_cn.md
.github/: CI.md  CODEOWNERS  dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  health.py  schemas.py  tasks.py
backend/app/core/: auth.py  config.py  errors.py  logging.py  metrics.py  observability.py
backend/app/domain/: task.py
backend/app/infra/: db.py  gcs.py  models.py  pubsub.py  redis_client.py  repository.py
backend/app/providers/: base.py  registry.py
backend/app/providers/llm/: mock.py  openai_gpt.py  openrouter_chat.py
backend/app/providers/stt/: mock.py  openai_whisper.py  openrouter_whisper.py
backend/app/workers/: _pubsub_push.py  llm_worker.py  outbox_sweeper.py  stt_worker.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_end_to_end.py  test_repository.py
backend/tests/providers/: conftest.py  test_openai_gpt.py  test_openai_whisper.py  test_openrouter_chat.py  test_openrouter_whisper.py
backend/tests/unit/: test_auth.py  test_metrics.py  test_providers.py  test_pubsub_push_auth.py  test_state_machine.py  test_task_entity.py
docs/: PIPELINE.md  deck.md  demo-script.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+88 files in other folders)
