[project]
name = "ai-stt-backend"
version = "0.1.0"
description = "AI Processing Platform — FastAPI backend (gateway + workers)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "google-cloud-pubsub>=2.27",
    "google-cloud-storage>=2.18",
    "google-auth>=2.36",
    "openai>=1.55",
    "httpx>=0.28",
    "structlog>=24.4",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b2",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b2",
    "opentelemetry-instrumentation-redis>=0.49b2",
    "opentelemetry-exporter-gcp-trace>=1.9",
    "opentelemetry-exporter-gcp-monitoring>=1.9",
    "tenacity>=9.0",
    "python-jose[cryptography]>=3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",
    "respx>=0.21",
    "faker>=33.1",
    "types-redis>=4.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "app/workers/*"]
